--- a/src/app/features/viajes/viajes.component.html
+++ b/src/app/features/viajes/viajes.component.html
@@ -1,1 +1,18 @@
-<p>viajes works!</p>
+<div class="viajes-container">
+    <h2>Viajes Organizados</h2>
+    <table class="viajes-table">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Nombre</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let viaje of viajes">
+          <td>{{ viaje.id }}</td>
+          <td>{{ viaje.name }}</td>
+        </tr>
+      </tbody>
+    </table>
+    <p *ngIf="error" class="error-message">{{ error }}</p>
+   </div>
