--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -5,8 +5,9 @@
     <nav class="navigation">
       <ul class="nav-links">
         <li><a href="/">Inicio</a></li>
-        <li><a href="/viajes">Viajes</a></li>
+        <li *ngIf="isLoggedIn"><a routerLink="/viajes">viajes</a></li>
+        <li><a routerLink="/login">Login</a></li>
+        <li *ngIf="isLoggedIn"><a (click)="logout()">Logout</a></li>
       </ul>
-      <button class="menu-toggle" aria-label="Open Menu">&#9776;</button>
     </nav>
    </header>
