--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="main-footer">
     <div class="footer-content">
-      <p>Alumno: <strong>Tu Nombre</strong></p>
-      <p>Curso: <strong>DAW2 - Desarrollo Web en Entorno Servidor</strong></p>
+      <p> <strong>Daniel Adones</strong></p>
+      <p> <strong>Practica Club Nautico - EVIDEN</strong></p>
       <p>
         Este trabajo está bajo una licencia <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Creative Commons BY 4.0</a>.
       </p>
