--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -1,6 +1,6 @@
 /* Footer */
 .main-footer {
-    background-color: #333;
+    background-color: #141a3a;
     color: white;
     text-align: center;
     padding: 20px 10px;
