--- a/src/app/features/register/register.component.html
+++ b/src/app/features/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="register-container">
-    <h2>Registro</h2>
+    <h2>Register</h2>
     <form (ngSubmit)="onSubmit()" class="register-form">
       
       <div class="form-group">
@@ -73,7 +73,7 @@
         </label>
       </div>
   
-      <button type="submit" class="register-button">Registrarse</button>
+      <button type="submit" class="register-button">Register</button>
     </form>
   
     <p *ngIf="error" class="error-message">{{ error }}</p>
